--- a/PromoStudio.Web/PromoStudio.Web.csproj
+++ b/PromoStudio.Web/PromoStudio.Web.csproj
@@ -155,6 +155,10 @@
     </Compile>
     <Compile Include="Helpers\MvcExtensions.cs" />
     <Compile Include="Helpers\UrlHelperExtensions.cs" />
+    <Compile Include="Models\AuthData.cs" />
+    <Compile Include="Models\IPromoStudioIdentity.cs" />
+    <Compile Include="Models\PromoStudioIdentity.cs" />
+    <Compile Include="Models\PromoStudioPrincipal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -212,7 +216,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
