--- a/PromoStudio.Web/Web.config
+++ b/PromoStudio.Web/Web.config
@@ -65,7 +65,7 @@
     <httpRuntime targetFramework="4.5" />
     <compilation debug="true" targetFramework="4.5" />
     <authentication mode="Forms">
-      <forms loginUrl="~/Account/Login" timeout="2880" />
+      <forms loginUrl="~/" name="PROMOSTUDIO.AUTH" timeout="10080" slidingExpiration="true" />
     </authentication>
     <pages>
       <namespaces>
