--- a/PromoStudio.RenderQueueService/PromoStudio.RenderQueueService.csproj
+++ b/PromoStudio.RenderQueueService/PromoStudio.RenderQueueService.csproj
@@ -136,6 +136,9 @@
     <EmbeddedResource Include="ProjectInstaller.resx">
       <DependentUpon>ProjectInstaller.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="RenderQueueService.resx">
+      <DependentUpon>RenderQueueService.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Bcl.Build.1.0.5\tools\Microsoft.Bcl.Build.targets" />
