Added log4net IOC

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -7,4 +7,5 @@
   <repository path="..\PromoStudio.RenderQueue.Tests\packages.config" />
   <repository path="..\PromoStudio.RenderQueueService\packages.config" />
   <repository path="..\PromoStudio.Storage\packages.config" />
+  <repository path="..\PromoStudio.Web\packages.config" />
 </repositories>
