--- a/PromoStudio.RenderQueueService/PromoStudio.RenderQueueService.csproj
+++ b/PromoStudio.RenderQueueService/PromoStudio.RenderQueueService.csproj
@@ -49,6 +49,9 @@
     <Reference Include="Autofac.Configuration">
       <HintPath>..\packages\Autofac.3.0.2\lib\net40\Autofac.Configuration.dll</HintPath>
     </Reference>
+    <Reference Include="log4net">
+      <HintPath>..\packages\log4net.2.0.0\lib\net40-full\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Threading.Tasks">
       <HintPath>..\packages\Microsoft.Bcl.Async.1.0.16\lib\net45\Microsoft.Threading.Tasks.dll</HintPath>
     </Reference>
@@ -107,6 +110,7 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="install.bat" />
+    <None Include="log4net.config" />
     <None Include="packages.config" />
     <None Include="uninstall.bat" />
   </ItemGroup>
