--- a/PromoStudio.RenderQueueService/PromoStudio.RenderQueueService.csproj
+++ b/PromoStudio.RenderQueueService/PromoStudio.RenderQueueService.csproj
@@ -110,7 +110,9 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="install.bat" />
-    <None Include="log4net.config" />
+    <None Include="log4net.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
     <None Include="uninstall.bat" />
   </ItemGroup>
