added additional logging

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -4,7 +4,9 @@
   <repository path="..\PromoStudio.Data\packages.config" />
   <repository path="..\PromoStudio.Demo\packages.config" />
   <repository path="..\PromoStudio.Rendering.Tests\packages.config" />
+  <repository path="..\PromoStudio.Rendering\packages.config" />
   <repository path="..\PromoStudio.RenderQueue.Tests\packages.config" />
+  <repository path="..\PromoStudio.RenderQueue\packages.config" />
   <repository path="..\PromoStudio.RenderQueueService\packages.config" />
   <repository path="..\PromoStudio.Storage\packages.config" />
   <repository path="..\PromoStudio.Web\packages.config" />
