--- a/PromoStudio.Web/PromoStudio.Web.csproj
+++ b/PromoStudio.Web/PromoStudio.Web.csproj
@@ -185,6 +185,7 @@
     <Content Include="Global.asax" />
     <Content Include="Scripts\lib\history.js" />
     <Content Include="Scripts\lib\jquery.bootstrap.wizard.js" />
+    <Content Include="Scripts\lib\jquery.form.js" />
     <Content Include="Scripts\lib\jquery.pjax.js" />
     <Content Include="Scripts\lib\modernizr.js" />
     <Content Include="Scripts\models\customer.js" />
