--- a/PromoStudio.Common/PromoStudio.Common.csproj
+++ b/PromoStudio.Common/PromoStudio.Common.csproj
@@ -51,6 +51,8 @@
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="Constants.cs" />
+    <Compile Include="Enumerations\StoryboardStatus.cs" />
+    <Compile Include="Enumerations\StoryboardItemType.cs" />
     <Compile Include="Enumerations\CustomerLoginPlatform.cs" />
     <Compile Include="Enumerations\CustomerResourceStatus.cs" />
     <Compile Include="Enumerations\VoiceActorStatus.cs" />
@@ -64,6 +66,8 @@
     <Compile Include="Enumerations\TemplateScriptItemType.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Models\AudioTemplateScript.cs" />
+    <Compile Include="Models\StoryboardItem.cs" />
+    <Compile Include="Models\Storyboard.cs" />
     <Compile Include="Models\CustomerLoginCredential.cs" />
     <Compile Include="Models\CustomerVideoScript.cs" />
     <Compile Include="Models\CustomerVideoVoiceOver.cs" />
