--- a/PromoStudio.Web/PromoStudio.Web.csproj
+++ b/PromoStudio.Web/PromoStudio.Web.csproj
@@ -185,6 +185,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <None Include="app.build.json" />
     <Compile Include="ViewModels\BuildCookieViewModel.cs" />
     <Compile Include="ViewModels\BuildViewModelBase.cs" />
     <Compile Include="ViewModels\BrandingViewModel.cs" />
@@ -335,6 +336,12 @@
       <DependentUpon>jquery-ui-1.10.3.js</DependentUpon>
     </Content>
     <Content Include="Content\css\build-branding.less" />
+    <Content Include="Scripts\lib\ko.custom.min.js">
+      <DependentUpon>ko.custom.js</DependentUpon>
+    </Content>
+    <Content Include="Scripts\lib\ko.custom.min.js.map">
+      <DependentUpon>ko.custom.js</DependentUpon>
+    </Content>
     <None Include="Scripts\vsdoc\jquery-1.9.1.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\jquery-1.9.1.js" />
@@ -384,6 +391,7 @@
     <Content Include="Scripts\models\templateScriptItem.js" />
     <Content Include="Scripts\models\templateScript.js" />
     <Content Include="Scripts\ps\logger.js" />
+    <Content Include="r.js" />
     <Content Include="Scripts\require.min.js" />
     <Content Include="Scripts\requireConfig.js" />
     <Content Include="Scripts\viewModels\buildNavViewModel.js" />
