--- a/PromoStudio.Rendering/Properties/Settings.settings
+++ b/PromoStudio.Rendering/Properties/Settings.settings
@@ -3,16 +3,16 @@
   <Profiles />
   <Settings>
     <Setting Name="AfterEffectsExePath" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">C:\Program Files\Adobe\Adobe After Effects CS6\Support Files\afterfx.exe</Value>
+      <Value Profile="(Default)">C:\Program Files\Adobe\Adobe After Effects CC\Support Files\afterfx.exe</Value>
     </Setting>
     <Setting Name="ScriptPath" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">C:\PromoStudio\AE Template</Value>
+      <Value Profile="(Default)">C:\PromoStudio\AETemplate</Value>
     </Setting>
     <Setting Name="OutputPath" Type="System.String" Scope="Application">
       <Value Profile="(Default)">C:\PromoStudio\Output</Value>
     </Setting>
     <Setting Name="RenderProjectPath" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">C:\PromoStudio\AE Template\SpliceVideo.aep</Value>
+      <Value Profile="(Default)">C:\PromoStudio\AETemplate\SpliceVideo.aep</Value>
     </Setting>
     <Setting Name="RenderProjectComp" Type="System.String" Scope="Application">
       <Value Profile="(Default)">HDTV 24FPS</Value>
