--- a/PromoStudio.Rendering/app.config
+++ b/PromoStudio.Rendering/app.config
@@ -8,16 +8,16 @@
     <applicationSettings>
         <PromoStudio.Rendering.Properties.Settings>
             <setting name="AfterEffectsExePath" serializeAs="String">
-                <value>C:\Program Files\Adobe\Adobe After Effects CS6\Support Files\afterfx.exe</value>
+                <value>C:\Program Files\Adobe\Adobe After Effects CC\Support Files\afterfx.exe</value>
             </setting>
             <setting name="ScriptPath" serializeAs="String">
-                <value>C:\PromoStudio\AE Template</value>
+                <value>C:\PromoStudio\AETemplate</value>
             </setting>
             <setting name="OutputPath" serializeAs="String">
                 <value>C:\PromoStudio\Output</value>
             </setting>
             <setting name="RenderProjectPath" serializeAs="String">
-                <value>C:\PromoStudio\AE Template\SpliceVideo.aep</value>
+                <value>C:\PromoStudio\AETemplate\SpliceVideo.aep</value>
             </setting>
             <setting name="RenderProjectComp" serializeAs="String">
                 <value>HDTV 24FPS</value>
