--- a/PromoStudio.Web/PromoStudio.Web.csproj
+++ b/PromoStudio.Web/PromoStudio.Web.csproj
@@ -180,6 +180,11 @@
     <Compile Include="Models\IPromoStudioIdentity.cs" />
     <Compile Include="Models\PromoStudioIdentity.cs" />
     <Compile Include="Models\PromoStudioPrincipal.cs" />
+    <Compile Include="Models\Session\CustomerVideo.cs" />
+    <Compile Include="Models\Session\CustomerTemplateScriptItem.cs" />
+    <Compile Include="Models\Session\CustomerTemplateScript.cs" />
+    <Compile Include="Models\Session\BuildState.cs" />
+    <Compile Include="Models\Session\CustomerVideoItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -365,7 +370,8 @@
     <Content Include="Scripts\requireConfig.js" />
     <Content Include="Scripts\viewModels\buildNavViewModel.js" />
     <Content Include="Scripts\viewModels\brandingViewModel.js" />
-    <Content Include="Scripts\viewModels\photoPlaceholderViewModel.js" />
+    <Content Include="Scripts\viewModels\photoSlotViewModel.js" />
+    <Content Include="Scripts\viewModels\photoTemplatesViewModel.js" />
     <Content Include="Scripts\viewModels\photosViewModel.js" />
     <Content Include="Scripts\viewModels\footageViewModel.js" />
     <Content Include="Scripts\viewModels\scaffold.js" />
