resource chooser checkpoint

--- a/PromoStudio.Web/PromoStudio.Web.csproj
+++ b/PromoStudio.Web/PromoStudio.Web.csproj
@@ -370,7 +370,7 @@
     <Content Include="Scripts\requireConfig.js" />
     <Content Include="Scripts\viewModels\buildNavViewModel.js" />
     <Content Include="Scripts\viewModels\brandingViewModel.js" />
-    <Content Include="Scripts\viewModels\photoUploadViewModel.js" />
+    <Content Include="Scripts\viewModels\photoChooserViewModel.js" />
     <Content Include="Scripts\viewModels\photoSlotViewModel.js" />
     <Content Include="Scripts\viewModels\photoTemplatesViewModel.js" />
     <Content Include="Scripts\viewModels\photosViewModel.js" />
