--- a/PromoStudio.RenderQueueService/PromoStudio.RenderQueueService.csproj
+++ b/PromoStudio.RenderQueueService/PromoStudio.RenderQueueService.csproj
@@ -108,7 +108,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="install.bat" />
     <None Include="log4net.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
