--- a/PromoStudio.Storage/PromoStudio.Storage.csproj
+++ b/PromoStudio.Storage/PromoStudio.Storage.csproj
@@ -41,6 +41,12 @@
     <Reference Include="LitS3">
       <HintPath>..\packages\LitS3.1.0.1\lib\LitS3.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.5.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="RestSharp">
+      <HintPath>..\packages\RestSharp.104.2.0\lib\net4\RestSharp.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -55,12 +61,19 @@
     </Compile>
     <Compile Include="AmazonS3StorageProvider.cs" />
     <Compile Include="IStorageProvider.cs" />
+    <Compile Include="IStreamingProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="VidyardStreamingProvider.cs" />
+    <Compile Include="Vidyard\Chapter.cs" />
+    <Compile Include="Vidyard\Player.cs" />
+    <Compile Include="Vidyard\PlayerRequest.cs" />
+    <Compile Include="Vidyard\Tag.cs" />
+    <Compile Include="Vidyard\Video.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
