--- a/PromoStudio.Storage/app.config
+++ b/PromoStudio.Storage/app.config
@@ -19,6 +19,18 @@
             <setting name="BucketNamePrefix" serializeAs="String">
                 <value>PromoStudio-</value>
             </setting>
+            <setting name="VidyardApiKey" serializeAs="String">
+                <value>aK4mXiU6zwpuRqqxi9in</value>
+            </setting>
+            <setting name="VidyardApiUrl" serializeAs="String">
+                <value>https://api.vidyard.com/dashboard/v1/</value>
+            </setting>
+            <setting name="VidyardApiUserId" serializeAs="String">
+                <value>tim@promostudio.com</value>
+            </setting>
+            <setting name="VidyardApiSecret" serializeAs="String">
+                <value>goldmine</value>
+            </setting>
         </PromoStudio.Storage.Properties.Settings>
     </applicationSettings>
 </configuration>
