checkpoint for designer

--- a/PromoStudio.Storage.Tests/PromoStudio.Storage.Tests.csproj
+++ b/PromoStudio.Storage.Tests/PromoStudio.Storage.Tests.csproj
@@ -50,6 +50,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="AmazonS3StorageProvider_Tests.cs" />
     <Compile Include="VidyardStreamingProvider_Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
