--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\PromoStudio.CloudStatusService\packages.config" />
   <repository path="..\PromoStudio.Data.Tests\packages.config" />
   <repository path="..\PromoStudio.Data\packages.config" />
   <repository path="..\PromoStudio.Demo\packages.config" />
